WIP: Put some space on the bottom of the menu, to fix the overflow problem in mobile hamburger menu

--- a/style.css
+++ b/style.css
@@ -15,3 +15,7 @@
 	display: block;
 	margin-bottom: 18px;
 }
+
+.main-navigation {
+	margin-bottom: 100px;
+}
